--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <a href="#mainTabs" class="visually-hidden-focusable">Skip to main content</a>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="z-index: 1030;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="z-index: 1030;">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#" style="gap: 12px;">
                 <img src="Websitelogo.jpeg" alt="Airlytics Logo" class="navbar-logo" style="width: 65px; height: 65px; border-radius: 50%; object-fit: cover; background: transparent; box-shadow: 0 4px 16px rgba(0,0,0,0.4);"> 
@@ -89,16 +89,18 @@
         </div>
     </div>
 
-    <!-- Add padding to body to account for fixed navbar -->
+    <!-- Remove body padding since navbar is not fixed -->
     <style>
-        body {
-            padding-top: 76px; /* Height of fixed navbar */
-        }
         .navbar-logo {
             transition: transform 0.3s ease;
         }
         .navbar-logo:hover {
             transform: scale(1.1);
+        }
+        #guestLimitationsPopup {
+            position: fixed;
+            top: 20px;
+            left: 20px;
         }
     </style>
 
