--- a/public/landing.html
+++ b/public/landing.html
@@ -36,16 +36,13 @@
     </script>
     
     <style>
-        /* Add padding to body for fixed navbar */
-        body {
-            padding-top: 76px;
-        }
+        /* Remove padding since navbar is not fixed */
     </style>
 </head>
 <body>
     <div class="content-wrapper">
-        <!-- Navigation - Modern Design with Fixed Position -->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" role="navigation" aria-label="Main navigation">
+        <!-- Navigation - Modern Design -->
+        <nav class="navbar navbar-expand-lg navbar-dark" role="navigation" aria-label="Main navigation">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="#" aria-label="Airlytics Home" style="gap: 12px;">
                     <img src="Websitelogo.jpeg" alt="Airlytics Logo" class="navbar-logo" style="width: 65px; height: 65px; border-radius: 50%; object-fit: cover; box-shadow: 0 4px 16px rgba(0,0,0,0.4);"> 
