--- a/public/index.html
+++ b/public/index.html
@@ -66,15 +66,21 @@
     <section>
       <div class="flex flex-col gap-6 lg:flex-row">
         <div class="flex-1 space-y-6">
-          <div class="grid gap-4 sm:grid-cols-2 xl:grid-cols-4" id="overviewCards">
-            <!-- overview cards injected here -->
+          <div class="grid gap-4 sm:grid-cols-2 xl:grid-cols-4" id="overviewCards" aria-live="polite">
+            <div class="skeleton skeleton-card h-24 rounded-3xl border border-white/5 bg-white/[0.08]" aria-hidden="true"></div>
+            <div class="skeleton skeleton-card h-24 rounded-3xl border border-white/5 bg-white/[0.08]" aria-hidden="true"></div>
+            <div class="skeleton skeleton-card h-24 rounded-3xl border border-white/5 bg-white/[0.08]" aria-hidden="true"></div>
+            <div class="skeleton skeleton-card h-24 rounded-3xl border border-white/5 bg-white/[0.08]" aria-hidden="true"></div>
           </div>
           <div class="rounded-3xl border border-white/5 bg-white/[0.03] p-6 shadow-2xl shadow-brand/5">
             <div class="mb-6 flex items-center justify-between">
               <h2 class="text-lg font-semibold">Global AQI Trend</h2>
-              <span id="overviewUpdatedAt" class="text-xs text-slate-400"></span>
+              <span id="overviewUpdatedAt" class="text-xs text-slate-400" data-tooltip="Timestamp of the last analytics refresh" tabindex="0"></span>
             </div>
-            <canvas id="overviewTrendChart" class="h-64 w-full"></canvas>
+            <div class="relative">
+              <div id="overviewTrendSkeleton" class="skeleton skeleton-chart pointer-events-none absolute inset-0 h-full w-full rounded-2xl" aria-hidden="true"></div>
+              <canvas id="overviewTrendChart" class="h-64 w-full"></canvas>
+            </div>
           </div>
         </div>
         <aside class="w-full max-w-sm space-y-6">
@@ -93,12 +99,21 @@
                 </svg>
               </div>
             </div>
-            <ul id="citySearchResults" class="mt-4 max-h-72 space-y-2 overflow-y-auto text-sm"></ul>
+            <div id="citySearchSkeleton" class="mt-4 space-y-2" aria-hidden="true">
+              <div class="skeleton skeleton-row h-12 rounded-xl border border-white/5 bg-white/[0.08]"></div>
+              <div class="skeleton skeleton-row h-12 rounded-xl border border-white/5 bg-white/[0.08]"></div>
+              <div class="skeleton skeleton-row h-12 rounded-xl border border-white/5 bg-white/[0.08]"></div>
+            </div>
+            <ul id="citySearchResults" class="mt-4 max-h-72 space-y-2 overflow-y-auto text-sm" aria-live="polite"></ul>
           </div>
           <div class="rounded-3xl border border-brand/30 bg-brand/10 p-6 shadow-xl shadow-brand/20">
             <h3 class="mb-3 text-lg font-semibold">Tracked cities</h3>
-            <p class="text-sm text-slate-200" id="trackedSummary">Save a city to monitor it quickly.</p>
-            <ul id="trackedCityList" class="mt-3 space-y-2 text-sm"></ul>
+            <p class="text-sm text-slate-200" id="trackedSummary" data-tooltip="Tracked cities sync with your account once you sign in" tabindex="0">Save a city to monitor it quickly.</p>
+            <div id="trackedListSkeleton" class="mt-3 space-y-2" aria-hidden="true">
+              <div class="skeleton skeleton-row h-10 rounded-xl border border-white/10 bg-white/[0.12]"></div>
+              <div class="skeleton skeleton-row h-10 rounded-xl border border-white/10 bg-white/[0.12]"></div>
+            </div>
+            <ul id="trackedCityList" class="mt-3 space-y-2 text-sm" aria-live="polite"></ul>
           </div>
         </aside>
       </div>
@@ -111,14 +126,14 @@
             <h2 id="selectedCityName" class="text-2xl font-semibold">Select a city to explore</h2>
             <p id="selectedCitySubtitle" class="text-sm text-slate-400"></p>
           </div>
-          <button id="toggleTrackButton" class="hidden rounded-full border border-white/10 px-4 py-2 text-sm font-medium text-slate-100 transition hover:bg-white/10"></button>
+          <button id="toggleTrackButton" class="hidden rounded-full border border-white/10 px-4 py-2 text-sm font-medium text-slate-100 transition hover:bg-white/10" data-tooltip="Add this city to your tracked list for quick access" tabindex="0"></button>
         </div>
-        <div id="cityDetailSkeleton" class="mt-6 grid gap-4 sm:grid-cols-2">
-          <div class="h-24 rounded-2xl bg-white/5"></div>
-          <div class="h-24 rounded-2xl bg-white/5"></div>
-          <div class="h-48 rounded-2xl bg-white/5 sm:col-span-2"></div>
+        <div id="cityDetailSkeleton" class="mt-6 grid gap-4 sm:grid-cols-2" aria-hidden="false">
+          <div class="skeleton skeleton-card h-24 rounded-2xl border border-white/5 bg-white/[0.08]"></div>
+          <div class="skeleton skeleton-card h-24 rounded-2xl border border-white/5 bg-white/[0.08]"></div>
+          <div class="skeleton skeleton-chart h-48 rounded-2xl border border-white/5 bg-white/[0.08] sm:col-span-2"></div>
         </div>
-        <div id="cityDetailContent" class="mt-6 hidden space-y-6">
+        <div id="cityDetailContent" class="mt-6 hidden space-y-6" aria-hidden="true">
           <div class="grid gap-4 md:grid-cols-2">
             <div class="rounded-2xl border border-white/5 bg-white/5 p-4">
               <p class="text-sm text-slate-400">Latest AQI</p>
@@ -153,9 +168,17 @@
       <div class="rounded-3xl border border-white/5 bg-white/[0.04] p-6 shadow-2xl shadow-brand/10 lg:col-span-5">
         <div class="mb-4 flex items-center justify-between">
           <h2 class="text-lg font-semibold">Live map</h2>
-          <span class="text-xs text-slate-400">Tap a marker to view analytics</span>
+          <span class="text-xs text-slate-400" data-tooltip="Markers are limited on mobile for performance" tabindex="0">Tap a marker to view analytics</span>
         </div>
-        <div id="cityMap" class="h-[420px] w-full rounded-2xl border border-white/5"></div>
+        <div class="relative">
+          <div id="mapSkeleton" class="skeleton skeleton-map pointer-events-none absolute inset-0 rounded-2xl" aria-hidden="true"></div>
+          <div id="cityMap" class="relative h-[420px] w-full rounded-2xl border border-white/5"></div>
+        </div>
+        <div id="regionalLeadersSkeleton" class="mt-4 grid gap-3 text-sm" aria-hidden="true">
+          <div class="skeleton skeleton-row h-11 rounded-xl border border-white/5 bg-white/[0.08]"></div>
+          <div class="skeleton skeleton-row h-11 rounded-xl border border-white/5 bg-white/[0.08]"></div>
+          <div class="skeleton skeleton-row h-11 rounded-xl border border-white/5 bg-white/[0.08]"></div>
+        </div>
         <div class="mt-4 grid gap-3 text-sm" id="regionalLeaders"></div>
       </div>
     </section>
@@ -166,10 +189,16 @@
         <span class="text-xs text-slate-400">Based on most recent summaries</span>
       </div>
       <div class="mt-6 grid gap-6 md:grid-cols-2">
-        <div class="flex items-center justify-center">
+        <div class="relative flex items-center justify-center">
+          <div id="categoryChartSkeleton" class="skeleton skeleton-chart pointer-events-none absolute h-64 w-64 rounded-full" aria-hidden="true"></div>
           <canvas id="categoryDoughnut" class="h-64 w-64"></canvas>
         </div>
-        <div id="categoryLegend" class="space-y-3 text-sm"></div>
+        <div id="categoryLegendSkeleton" class="space-y-3 text-sm" aria-hidden="true">
+          <div class="skeleton skeleton-row h-12 rounded-xl border border-white/5 bg-white/[0.08]"></div>
+          <div class="skeleton skeleton-row h-12 rounded-xl border border-white/5 bg-white/[0.08]"></div>
+          <div class="skeleton skeleton-row h-12 rounded-xl border border-white/5 bg-white/[0.08]"></div>
+        </div>
+        <div id="categoryLegend" class="space-y-3 text-sm" aria-live="polite"></div>
       </div>
     </section>
   </main>
