Integrate SMTP OTP service into auth flow

--- a/public/index.html
+++ b/public/index.html
@@ -29,13 +29,13 @@
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-sA+4J5Zpz3Yt6v1sAEG2A9KzH9YdS4GnSx9RS0XV6Ic="
-    crossorigin=""
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin="anonymous"
   />
   <script
     src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-o9N1j7kG8R2TnHn0gRIBm3w12/lG6L1p1sC6+AAZQDk="
-    crossorigin=""
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin="anonymous"
     defer
   ></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js" defer></script>
