--- a/public/index.html
+++ b/public/index.html
@@ -8,24 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: {
-            sans: ["Inter", "ui-sans-serif", "system-ui"],
-          },
-          colors: {
-            brand: {
-              DEFAULT: "#2563eb",
-              dark: "#1d4ed8",
-            },
-          },
-        },
-      },
-    };
-  </script>
+  <link rel="stylesheet" href="/styles/tailwind.generated.css" />
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
